Add chezmoi shortening

--- a/dot_oh-my-zsh/custom/aliases.zsh.tmpl
+++ b/dot_oh-my-zsh/custom/aliases.zsh.tmpl
@@ -16,6 +16,8 @@ function gcoi() { git checkout $(git branch | pick); }
 alias c="code"
 alias c.="code ."
 
+alias cz="chezmoi"
+
 # Remaps
 alias j="z"
 alias cat="bat"
