--- a/run_once-02-homebrew-packages.sh.tmpl
+++ b/run_once-02-homebrew-packages.sh.tmpl
@@ -23,6 +23,7 @@ brew "wifi-password"
 brew "youtube-dl"
 brew "zsh"
 brew "zsh-completions"
+brew "zsh-syntax-highlighting"
 
 {{ if eq .env "personal" }}
 brew "postgresql", restart_service: true
