Fix incorrect set args

--- a/run_once-01-install-homebrew.sh.tmpl
+++ b/run_once-01-install-homebrew.sh.tmpl
@@ -1,6 +1,6 @@
 #!/bin/sh
 
-set -eset -e
+set -e
 
 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
 
