Switch to chezmoiexternal for oh-my-zsh install and use zsh-custom dir
Using a script for installation seems to conflict with adding custom theme and aliases

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -2,7 +2,7 @@
 export ZSH="{{ .chezmoi.homeDir }}/.oh-my-zsh"
 
 # Would you like to use another custom folder than $ZSH/custom?
-ZSH_CUSTOM={{ .chezmoi.homeDir }}/zsh-custom
+ZSH_CUSTOM={{ .chezmoi.homeDir }}/.zsh-custom
 
 # See https://github.com/robbyrussell/oh-my-zsh/wiki/Themes
 ZSH_THEME="af-magic"
