Fix missing tap for heroku and misnamed Zoom name

--- a/run_once_02_homebrew_packages.sh.tmpl
+++ b/run_once_02_homebrew_packages.sh.tmpl
@@ -8,6 +8,7 @@ tap "homebrew/cask"
 tap "homebrew/cask-fonts"
 tap "homebrew/core"
 tap "homebrew/services"
+tap "heroku/brew"
 
 brew "bat"
 brew "fzf"
@@ -62,7 +63,7 @@ cask "typora"
 cask "visual-studio-code"
 cask "vlc"
 cask "whatsapp"
-cask "zoomus"
+cask "zoom"
 
 {{ if eq .env "personal" }}
 cask "backblaze"
