--- a/run_once_02_homebrew_packages.sh.tmpl
+++ b/run_once_02_homebrew_packages.sh.tmpl
@@ -32,6 +32,7 @@ brew "postgresql", restart_service: true
 
 {{ if eq .env "work" }}
 brew "ansible"
+brew "coreutils"
 brew "gh"
 brew "heroku"
 brew "rbenv"
