Replace hiddenbar with bartender - works better with notch MBPs

--- a/run_once_02_homebrew_packages.sh.tmpl
+++ b/run_once_02_homebrew_packages.sh.tmpl
@@ -40,13 +40,13 @@ brew "sops"
 {{ end }}
 
 cask "alfred"
+cask "bartender"
 cask "dropbox"
 cask "fantastical"
 cask "firefox"
 cask "font-fira-code"
 cask "gitup"
 cask "google-chrome"
-cask "hiddenbar"
 cask "iterm2"
 cask "kap"
 cask "microsoft-edge"
