Install sed for work

--- a/run_once_02_homebrew_packages.sh.tmpl
+++ b/run_once_02_homebrew_packages.sh.tmpl
@@ -34,6 +34,7 @@ brew "postgresql", restart_service: true
 brew "ansible"
 brew "coreutils"
 brew "gh"
+brew "gnu-sed"
 brew "heroku"
 brew "rbenv"
 brew "sops"
