--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -66,6 +66,6 @@ export PATH="$VOLTA_HOME/bin:$PATH"
 {{ if eq .env "work" }}
 # Work only
 
-# Set up make PATH
-PATH="$(brew --prefix)/opt/make/libexec/gnubin:$PATH"
+# Set up sed PATH
+PATH="/opt/homebrew/opt/gnu-sed/libexec/gnubin:$PATH"
 {{ end }}
