Add a homebrew path that brew doctor was complaining about

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -59,6 +59,9 @@ unsetopt share_history
 # Set VSCode as preferred editor
 export EDITOR='code -n -w'
 
+# Add extra homebrew path
+export PATH="/usr/local/sbin:$PATH"
+
 # Add volta to path
 export VOLTA_HOME="$HOME/.volta"
 export PATH="$VOLTA_HOME/bin:$PATH"
