Add postgres 15 to path manually
Homebrew you had 1 job

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -62,6 +62,12 @@ export EDITOR='code -n -w'
 # Add extra homebrew path
 export PATH="/usr/local/sbin:$PATH"
 
+{{ if eq .env "personal" }}
+# For whatever reason, the postgres v15 package is "key-only" which means that
+# we have to manually add it to the path
+export PATH="/usr/local/opt/postgresql@15/bin:$PATH"
+{{end}}
+
 # Add volta to path
 export VOLTA_HOME="$HOME/.volta"
 export PATH="$VOLTA_HOME/bin:$PATH"
