Add arc-cli alias to script Arc

--- a/dot_zsh-custom/aliases.zsh.tmpl
+++ b/dot_zsh-custom/aliases.zsh.tmpl
@@ -32,6 +32,8 @@ function tree() {
   command tree -aC -I '.git|node_modules' --dirsfirst "$@" | less -FRNX
 }
 
+alias arc-cli='CHROME_BUNDLE_IDENTIFIER="company.thebrowser.Browser" chrome-cli "$@"'
+
 {{ if eq .env "work" }}
 # Work only
 
