Fix casing for chezmoi

--- a/chezmoi/.chezmoi.toml.tmpl
+++ b/chezmoi/.chezmoi.toml.tmpl
@@ -1,8 +1,8 @@
 {{- $env := promptString "Env (personal or work)" -}}
 {{- $email := promptString "Email" -}}
-{{- $fullname := promptString "Full name" -}}
+{{- $fullName := promptString "Full name" -}}
 
 [data]
     env = {{ $env | quote }}
     email = {{ $email | quote }}
-    fullname = {{ $fullname | quote }}
+    fullName = {{ $fullName | quote }}
