--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -67,7 +67,7 @@ export PATH="/usr/local/sbin:$PATH"
 export PATH="/usr/local/opt/postgresql@15/bin:$PATH"
 
 # Read Github PAT token for local development of the CYF curriculum from 1password
-# export CYF_CURRICULUM_GITHUB_BEARER_TOKEN="{{ onepasswordRead "op://Personal/GitHub/CYF Curriculum Personal Access Token" }}"
+# export CYF_CURRICULUM_GITHUB_BEARER_TOKEN="{{ onepasswordRead 'op://Personal/GitHub/CYF Curriculum Personal Access Token' }}"
 
 # Add volta to path
 export VOLTA_HOME="$HOME/.volta"
