Add a few more casks

--- a/run_once_02_homebrew_packages.sh.tmpl
+++ b/run_once_02_homebrew_packages.sh.tmpl
@@ -40,7 +40,9 @@ cask "font-fira-code"
 cask "gitup"
 cask "google-chrome"
 cask "iterm2"
+cask "jordanbaird-ice"
 cask "kap"
+cask "keyboardcleantool"
 cask "microsoft-edge"
 cask "mimestream"
 cask "minecraft"
