--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -69,3 +69,8 @@ export PATH="/usr/local/opt/postgresql@15/bin:$PATH"
 # Add volta to path
 export VOLTA_HOME="$HOME/.volta"
 export PATH="$VOLTA_HOME/bin:$PATH"
+{{ if eq .env "work" }}
+export PYENV_ROOT="$HOME/.pyenv"
+command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"
+eval "$(pyenv init -)"
+{{ end }}
