Additional work packages

--- a/run_once_02_homebrew_packages.sh.tmpl
+++ b/run_once_02_homebrew_packages.sh.tmpl
@@ -30,6 +30,9 @@ brew "hugo"
 {{ if eq .env "work" }}
 brew "coreutils"
 brew "diffutils"
+brew "pre-commit"
+brew "jq"
+brew "yq"
 {{ end }}
 
 cask "arc"
