--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -54,7 +54,7 @@ source "$(brew --prefix)/share/zsh-syntax-highlighting/zsh-syntax-highlighting.z
 
 # Enable fzf (fuzzy reverse command search)
 # https://github.com/junegunn/fzf
-[ -f ~/.fzf.zsh ] && source ~/.fzf.zsh
+source <(fzf --zsh)
 
 # Disable sharing of history
 unsetopt share_history
