Adapt to work config

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -78,4 +78,10 @@ eval "$(pyenv init -)"
 
 # pipx
 export PATH="$PATH:$HOME/.local/bin"
+
+# AWS
+export AWS_PROFILE=AWSEngineeringAdminAccess-workloads.test.main
+
+export NVM_DIR="$HOME/.nvm"
+  [ -s "/opt/homebrew/opt/nvm/nvm.sh" ] && \. "/opt/homebrew/opt/nvm/nvm.sh"  # This loads nvm
 {{ end }}
