Add work python packages

--- a/run_once_02_homebrew_packages.sh.tmpl
+++ b/run_once_02_homebrew_packages.sh.tmpl
@@ -32,9 +32,12 @@ brew "coreutils"
 brew "diffutils"
 brew "jq"
 brew "nvm"
+brew "pipx"
 brew "pnpm"
 brew "postgresql@16"
 brew "pre-commit"
+brew "pyenv"
+brew "xz"
 brew "yq"
 {{ end }}
 
