Update docker compose to new style

--- a/dot_zsh-custom/aliases.zsh.tmpl
+++ b/dot_zsh-custom/aliases.zsh.tmpl
@@ -38,7 +38,7 @@ alias arc-cli='CHROME_BUNDLE_IDENTIFIER="company.thebrowser.Browser" chrome-cli 
 # Work only
 
 # Docker
-alias dc="docker-compose"
-alias ds="docker-compose stop"
-alias dl="docker-compose logs -f --tail=30"
+alias dc="docker compose"
+alias ds="docker compose stop"
+alias dl="docker compose logs -f --tail=30"
 {{ end }}
