--- a/run_once_02_homebrew_packages.sh.tmpl
+++ b/run_once_02_homebrew_packages.sh.tmpl
@@ -31,6 +31,8 @@ brew "yt-dlp"
 brew "coreutils"
 brew "diffutils"
 brew "jq"
+brew "kubectx"
+brew "kubernetes-cli"
 brew "nvm"
 brew "pipx"
 brew "pnpm"
