Add alias for kubectl

--- a/dot_zsh-custom/aliases.zsh.tmpl
+++ b/dot_zsh-custom/aliases.zsh.tmpl
@@ -41,4 +41,5 @@ alias arc-cli='CHROME_BUNDLE_IDENTIFIER="company.thebrowser.Browser" chrome-cli 
 alias dc="docker compose"
 alias ds="docker compose stop"
 alias dl="docker compose logs -f --tail=30"
+alias ku="kubectl"
 {{ end }}
