--- a/run_once_02_homebrew_packages.sh.tmpl
+++ b/run_once_02_homebrew_packages.sh.tmpl
@@ -36,7 +36,7 @@ brew "kubernetes-cli"
 brew "nvm"
 brew "pipx"
 brew "pnpm"
-brew "postgresql@17", restart_service: true
+brew "postgresql@17"
 brew "pre-commit"
 brew "pyenv"
 brew "xz"
