Add marked for work review script

--- a/run_once_02_homebrew_packages.sh.tmpl
+++ b/run_once_02_homebrew_packages.sh.tmpl
@@ -57,6 +57,10 @@ cask "iterm2"
 cask "jordanbaird-ice"
 cask "kap"
 cask "keyboardcleantool"
+{{- if eq .env "work" }}
+# Used for review script
+cask "marked-app"
+{{- end }}
 cask "microsoft-edge"
 cask "mimestream"
 {{- if eq .env "personal" }}
