Add review_pr script make default PR review easier

--- a/run_once_02_homebrew_packages.sh.tmpl
+++ b/run_once_02_homebrew_packages.sh.tmpl
@@ -30,6 +30,7 @@ brew "yt-dlp"
 {{ if eq .env "work" }}
 brew "coreutils"
 brew "diffutils"
+brew "gh"
 brew "jq"
 brew "kubectx"
 brew "kubernetes-cli"
